--- a/estilos/estilo1.css
+++ b/estilos/estilo1.css
@@ -2,18 +2,41 @@
     margin: 0px;
     text-indent: 10px;
      font-family: Arial, Helvetica, sans-serif;
+    
+}
+body{
+     background-image: linear-gradient(rgb(255, 255, 255), rgb(15, 102, 224));
+}
+header{
+    margin: 20px;
+    background-color: rgba(0, 0, 0, 0.201);
+    border-radius: 20px;
+    box-shadow:  0px 0px 10px 0px black;
+    padding: 0px;
+    text-align: center;
 }
 header > h1{
     text-align: center;
     margin-bottom: 50px;
 }
-
-main > aside#MATEMATICA{
+main{
+    display: grid;
+    justify-content: center;
+    grid-template-columns: minmax(150px, 620px);
+}
+main > aside#MATEMATICA,aside#PORTUQUES{
    margin-bottom: 50px;
-   background-color: aqua;
+   background-color: rgb(2, 192, 192);
    margin: 20px;
    box-shadow: 0px 0px 10px 0px black;
    border-radius: 20px;
+   padding: 20px;
+}
+main> aside#PORTUQUES{
+    background-color: rgb(174, 18, 49);
+}
+main> aside#PORTUQUES > h2{
+    text-align: center;
 }
 main > aside#MATEMATICA > h2{
     text-align: center;
