--- a/estilos/estilo1.css
+++ b/estilos/estilo1.css
@@ -27,7 +27,7 @@ main{
 main  h2{
     font-family: initial;
 }
-main > aside#MATEMATICA,aside#PORTUQUES{
+main > aside#MATEMATICA,aside#PORTUQUES ,aside#BIOLOGIA{
    
    margin-bottom: 50px;
    background-color: rgb(2, 192, 192);
@@ -54,4 +54,28 @@ main > aside#MATEMATICA{
 main > aside#MATEMATICA > h2{
     text-align: center;
     
+}
+main > aside#BIOLOGIA > h2{
+    text-align: center;
+    
+}
+main > aside#BIOLOGIA{
+    background-color: rgb(3, 149, 197);
+}
+
+footer{
+   margin-bottom: 50px;
+   background-color: rgb(2, 192, 192);
+   margin: 20px;
+   box-shadow: 0px 0px 10px 0px black;
+   border-radius: 20px;
+   padding: 20px;
+}
+.links{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.links > a{
+  text-align: center;
 }
